--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qt6-shadertools (6.2.0-2) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 09 Oct 2021 04:51:57 +0200
+
 qt6-shadertools (6.2.0-1) experimental; urgency=medium
 
   * Initial release (Closes: #995813).
