--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 qt6-shadertools (6.2.0-2) UNRELEASED; urgency=medium
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 09 Oct 2021 04:51:57 +0200
+  [ Patrick Franz ]
+  * Add missing dependency for qt6-shader-baker in libqt6shadertools6-
+    dev.
+
+ -- Patrick Franz <deltaone@debian.org>  Sat, 09 Oct 2021 04:54:59 +0200
 
 qt6-shadertools (6.2.0-1) experimental; urgency=medium
 
