--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,9 @@ qt6-shadertools (6.2.0-2) UNRELEASED; urgency=medium
   [ Patrick Franz ]
   * Add missing dependency for qt6-shader-baker in libqt6shadertools6-
     dev.
+  * Add missing MA:foreign for qt6-shader-baker.
 
- -- Patrick Franz <deltaone@debian.org>  Sat, 09 Oct 2021 04:54:59 +0200
+ -- Patrick Franz <deltaone@debian.org>  Sat, 09 Oct 2021 05:05:47 +0200
 
 qt6-shadertools (6.2.0-1) experimental; urgency=medium
 
