--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ qt6-shadertools (6.2.0-2) UNRELEASED; urgency=medium
   * Add missing dependency for qt6-shader-baker in libqt6shadertools6-
     dev.
   * Add missing MA:foreign for qt6-shader-baker.
+  * Do not install qt_lib_shadertools_private.pri.
 
  -- Patrick Franz <deltaone@debian.org>  Sat, 09 Oct 2021 05:05:47 +0200
 
