--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,13 @@
-qt6-shadertools (6.2.0-2) UNRELEASED; urgency=medium
+qt6-shadertools (6.2.1-1) UNRELEASED; urgency=medium
 
   [ Patrick Franz ]
   * Add missing dependency for qt6-shader-baker in libqt6shadertools6-
     dev.
   * Add missing MA:foreign for qt6-shader-baker.
   * Do not install qt_lib_shadertools_private.pri.
+  * New upstream release (6.2.1).
 
- -- Patrick Franz <deltaone@debian.org>  Sat, 09 Oct 2021 05:05:47 +0200
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 05 Nov 2021 16:45:09 +0100
 
 qt6-shadertools (6.2.0-1) experimental; urgency=medium
 
