--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ qt6-shadertools (6.2.1-1) UNRELEASED; urgency=medium
   * Add missing MA:foreign for qt6-shader-baker.
   * Do not install qt_lib_shadertools_private.pri.
   * New upstream release (6.2.1).
+  * Update B-Ds.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 05 Nov 2021 16:45:09 +0100
 
