--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ qt6-shadertools (6.2.1-1) UNRELEASED; urgency=medium
   * Do not install qt_lib_shadertools_private.pri.
   * New upstream release (6.2.1).
   * Update B-Ds.
+  * Update symbols.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 05 Nov 2021 16:45:09 +0100
 
