--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-qt6-shadertools (6.2.1-1) UNRELEASED; urgency=medium
+qt6-shadertools (6.2.1-1) experimental; urgency=medium
 
   [ Patrick Franz ]
   * Add missing dependency for qt6-shader-baker in libqt6shadertools6-
@@ -9,7 +9,7 @@ qt6-shadertools (6.2.1-1) UNRELEASED; urgency=medium
   * Update B-Ds.
   * Update symbols.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 05 Nov 2021 16:45:09 +0100
+ -- Patrick Franz <deltaone@debian.org>  Fri, 05 Nov 2021 16:55:21 +0100
 
 qt6-shadertools (6.2.0-1) experimental; urgency=medium
 
