--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qt6-shadertools (6.2.1-2) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 19 Nov 2021 13:02:17 +0100
+
 qt6-shadertools (6.2.1-1) experimental; urgency=medium
 
   [ Patrick Franz ]
