--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-qt6-shadertools (6.2.1-2) UNRELEASED; urgency=medium
+qt6-shadertools (6.2.1-2) experimental; urgency=medium
 
   [ Patrick Franz ]
   * Move private headers into the dev-package as they are referenced
     from a cmake-file.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 19 Nov 2021 13:02:17 +0100
+ -- Patrick Franz <deltaone@debian.org>  Sun, 21 Nov 2021 00:41:51 +0100
 
 qt6-shadertools (6.2.1-1) experimental; urgency=medium
 
