--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qt6-shadertools (6.2.2-1) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 02 Dec 2021 01:27:57 +0100
+
 qt6-shadertools (6.2.1-2) experimental; urgency=medium
 
   [ Patrick Franz ]
