--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ qt6-shadertools (6.2.2-1) UNRELEASED; urgency=medium
   [ Patrick Franz ]
   * New upstream release (6.2.2).
   * Bump Qt B-Ds to 6.2.2.
+  * Update installed files.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 02 Dec 2021 01:27:57 +0100
 
