--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qt6-shadertools (6.2.2-2) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 15 Feb 2022 21:51:54 +0100
+
 qt6-shadertools (6.2.2-1) experimental; urgency=medium
 
   [ Patrick Franz ]
