--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-qt6-shadertools (6.2.2-2) UNRELEASED; urgency=medium
+qt6-shadertools (6.2.2-2) unstable; urgency=medium
 
   [ Patrick Franz ]
   * Upload to unstable.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 15 Feb 2022 21:51:54 +0100
+ -- Patrick Franz <deltaone@debian.org>  Tue, 15 Feb 2022 21:52:25 +0100
 
 qt6-shadertools (6.2.2-1) experimental; urgency=medium
 
