--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qt6-shadertools (6.2.4-1) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 27 Mar 2022 17:26:59 +0200
+
 qt6-shadertools (6.2.2-2) unstable; urgency=medium
 
   [ Patrick Franz ]
