--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ qt6-shadertools (6.2.4-1) UNRELEASED; urgency=medium
 
   [ Patrick Franz ]
   * New upstream release (6.2.4).
+  * Bump Qt B-Ds to 6.2.4.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 27 Mar 2022 17:26:59 +0200
 
