--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qt6-shadertools (6.2.4-2) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 11 Apr 2022 23:19:56 +0200
+
 qt6-shadertools (6.2.4-1) experimental; urgency=medium
 
   [ Patrick Franz ]
