--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-qt6-shadertools (6.2.4-2) UNRELEASED; urgency=medium
+qt6-shadertools (6.2.4-2) experimental; urgency=medium
 
   [ Patrick Franz ]
   * Add patches to fix big endian issues.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 11 Apr 2022 23:19:56 +0200
+ -- Patrick Franz <deltaone@debian.org>  Mon, 11 Apr 2022 23:28:24 +0200
 
 qt6-shadertools (6.2.4-1) experimental; urgency=medium
 
