--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
 qt6-shadertools (6.2.4-3) UNRELEASED; urgency=medium
 
+  [ Patrick Franz ]
+  * Upload to unstable.
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 22 Apr 2022 19:55:55 +0200
 
 qt6-shadertools (6.2.4-2) experimental; urgency=medium
