--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-qt6-shadertools (6.2.4-3) UNRELEASED; urgency=medium
+qt6-shadertools (6.2.4-3) unstable; urgency=medium
 
   [ Patrick Franz ]
   * Upload to unstable.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 22 Apr 2022 19:55:55 +0200
+ -- Patrick Franz <deltaone@debian.org>  Fri, 22 Apr 2022 20:07:30 +0200
 
 qt6-shadertools (6.2.4-2) experimental; urgency=medium
 
